infra/longhorn/dev/longhorn-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: longhorn
    namespace: longhorn
spec:
    routes:
        - match: Host(`longhorn.local.investager.com`)
          kind: Rule
          middlewares:
              - name: longhorn-auth
                namespace: longhorn
          services:
              - name: longhorn-frontend
                namespace: longhorn
                port: 80
